--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -15,10 +15,12 @@
                 "-std=c++11",
                 "-I${workspaceFolder}/include/",
                 "-I/usr/local/Cellar/mysql/8.0.19/include/mysql/",
-                "-L",
-                "/usr/local/Cellar/mysql/8.0.19/lib/",
-                "-l",
-                "mysqlclient",
+                "-I/usr/local/opt/qt/include",
+                "-I/usr/local/opt/qt/include/QtCore",
+                "-I/usr/local/opt/qt/include/QtGui",
+                "-I/usr/local/opt/qt/include/QtWidgets",
+                "-L/usr/local/Cellar/mysql/8.0.19/lib/",
+                "-lmysqlclient",
                 "-o",
                 "${workspaceFolder}/build_CLI/DB"
             ],
